--- a/Windows11UpdateHelper.csproj
+++ b/Windows11UpdateHelper.csproj
@@ -14,6 +14,7 @@
 		<RepositoryType>git</RepositoryType>
 		<NeutralLanguage>zh-CN</NeutralLanguage>
 		<ApplicationIcon>icon.ico</ApplicationIcon>
+		<DebugType>none</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
